[gd_scene load_steps=6 format=3 uid="uid://8a6sqqdxwb6h"]

[ext_resource type="Script" path="res://Scripts/base_command.gd" id="1_mxf3b"]
[ext_resource type="Script" path="res://Scripts/province_selected.gd" id="2_5g6ce"]
[ext_resource type="Script" path="res://Scripts/up_or_down_pressed.gd" id="3_ccm4y"]
[ext_resource type="Script" path="res://Scripts/execute_pressed.gd" id="4_oqtoy"]
[ext_resource type="Script" path="res://Scripts/end_turn_pressed.gd" id="5_6g451"]

[node name="BaseCommand" type="Node2D"]
script = ExtResource("1_mxf3b")

[node name="ProvinceSelected" type="Node2D" parent="."]
script = ExtResource("2_5g6ce")

[node name="UpOrDownPressed" type="Node2D" parent="."]
script = ExtResource("3_ccm4y")

[node name="ExecutePressed" type="Node2D" parent="."]
script = ExtResource("4_oqtoy")

[node name="EndTurnPressed" type="Node2D" parent="."]
script = ExtResource("5_6g451")
